# zed-navi

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  extension.json  extension.toml
.github/workflows/: release.yml
.zed/: tasks.json
grammars/: navi.toml  navi_stream.toml
languages/navi/: brackets.scm  config.toml  highlights.scm  indents.scm  outline.scm  runnables.scm  tasks.json
languages/navi-stream/: config.toml  outline.scm
languages/navi_stream/: brackets.scm  config.toml  highlights.scm  outline.scm  tags.scm
src/: lib.rs
test/: macd.nvs  main.nv  navi.toml
