[package]
name = "zed-navi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
plugin = { git = "https://github.com/zed-industries/zed.git" }
language = { git = "https://github.com/zed-industries/zed.git" }
lsp = { git = "https://github.com/zed-industries/zed.git" }
rope = { git = "https://github.com/zed-industries/zed.git" }
util = { git = "https://github.com/zed-industries/zed.git" }

anyhow = "1.0.57"
async-compression = { version = "0.4", features = ["gzip", "futures-io"] }
async-tar = "0.4.2"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4.0"
regex = "1.5"
smol = "1.2"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = { version = "1.0", features = ["deserialize_in_place"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }

tree-sitter = { version = "0.20", features = ["wasm"] }
tree-sitter-navi = "0.0.4"


getrandom = { version = "0.2", features = ["js"] }

[patch.crates-io]
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter", rev = "1d8975319c2d5de1bf710e7e21db25b0eee4bc66" }

[profile.release]
opt-level = "z"
lto = true
